--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 28
     buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.app.lucasgiuri.profinder2"
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -21,7 +21,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.+'
+    implementation 'com.android.support:appcompat-v7:28.+'
+    implementation 'com.android.support:design:28.+'
+    implementation "com.yuyakaido.android:card-stack-view:2.0.0"
+    implementation 'com.facebook.fresco:fresco:1.11.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     //implementation 'com.facebook.android:facebook-sdk:[4,5)'
     implementation 'com.facebook.android:facebook-login:[4,5)'
